--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Install Visual Studio Build Tools
+    - name: Download and Install Visual Studio Build Tools
       run: |
         curl -LO https://aka.ms/vs/17/release/vs_buildtools.exe
-        start /wait vs_buildtools.exe --quiet --wait --norestart --nocache \
-          --add Microsoft.VisualStudio.Workload.ManagedDesktopBuildTools \
+        start /wait vs_buildtools.exe --quiet --wait --norestart --nocache ^
+          --add "Microsoft.VisualStudio.Workload.ManagedDesktopBuildTools" ^
           --includeRecommended
       shell: cmd
 
