--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,20 +16,15 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Download .NET Framework Reference Assemblies
+    - name: Install .NET Framework 4.0 Developer Pack
       run: |
-        curl -L -o referenceassemblies.nupkg https://globalcdn.nuget.org/packages/microsoft.netframework.referenceassemblies.net40.1.0.3.nupkg
-        mkdir -p referenceassemblies
-        tar -xf referenceassemblies.nupkg -C referenceassemblies
-
-    - name: Set Reference Assemblies Path
-      run: |
-        echo ##vso[task.setvariable variable=ReferencePath]$PWD/referenceassemblies/lib/net40
-      shell: bash
+        Invoke-WebRequest -Uri https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe -OutFile dotNetFx40_Full_x86_x64.exe
+        Start-Process -FilePath .\dotNetFx40_Full_x86_x64.exe -ArgumentList '/quiet', '/norestart' -Wait
+      shell: powershell
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
 
     - name: Build Project
       run: |
-        msbuild SharpWeb.sln /p:Configuration=Release /p:ReferencePath=$ReferencePath
+        msbuild SharpWeb.sln /p:Configuration=Release
