--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,13 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Install .NET Framework 4.0 Developer Pack
+    - name: Download and Extract Reference Assemblies
       run: |
-        Invoke-WebRequest -Uri https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe -OutFile dotNetFx40_Full_x86_x64.exe
-        Start-Process -FilePath .\dotNetFx40_Full_x86_x64.exe -ArgumentList '/quiet', '/norestart' -Wait
-      shell: powershell
+        curl -L -o referenceassemblies.nupkg https://globalcdn.nuget.org/packages/microsoft.netframework.referenceassemblies.net40.1.0.3.nupkg?packageVersion=1.0.3
+        mkdir -p "C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0"
+        tar -xf referenceassemblies.nupkg -C ./referenceassemblies
+        copy ".\referenceassemblies\build\.NETFramework\v4.0\*" "C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0" /Y
+      shell: cmd
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
