--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,9 @@ jobs:
     - name: Build Project
       run: |
         msbuild SharpWeb.sln /p:Configuration=Release
+
+    - name: Archive Build Output
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-output
+        path: SharpWeb\bin\Release
